@@ -1,5 +1,6 @@
 version 2.03.19 - 
 ====================================
+  Ensure udev is processing origin LV before its thick snapshots LVs.
   Fix and improve runtime memory size detection for VDO volumes.
 
 version 2.03.18 - 22nd december 2022
